--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^3.0.0",
@@ -59,11 +60,13 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-googleplus": {
-        "WEB_APPLICATION_CLIENT_ID": "1053422314296-jc6kvt4lt457457m7au1blpv9hontt9d.apps.googleusercontent.com"
-      }
+        "WEB_APPLICATION_CLIENT_ID": "1053422314296-jc6kvt4lt457457m7au1blpv9hontt9d.apps.googleusercontent.com",
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.1053422314296-jc6kvt4lt457457m7au1blpv9hontt9d"
+            }
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
